--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content style="--background: black">
     <div *ngIf="user.role == 'user'" style="position: relative; color: white;">
-        <div (click)="booksummary()" style="position: absolute; top: 16px; left: 20px; color: white; display: flex; align-items: center;">Book<ion-icon style="padding-left: 3px;" name="browsers-outline"></ion-icon></div>
+        <div (click)="booksummary()" style="position: absolute; top: 16px; left: 20px; color: white; display: flex; align-items: center;"><ion-icon style="padding-left: 3px;" name="browsers-outline"></ion-icon></div>
         <div (click)="signout()" style="position: absolute; top: 16px; right: 20px; color: white;"><ion-icon name="log-out-outline"></ion-icon></div>
 
         <div style="padding: 48px 20px 32px 20px;">
